--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    min-height: 188px;
+    height: 187px;
     background-color: #F9FAFB;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -27,8 +27,8 @@
     grid-row-start: 1;
     grid-row-end: 2;
     justify-self: center;
-    padding-right: 200px;
-    padding-top: 47px;
+    padding-right: 212px;
+    padding-top: 45px;
 }
 
 .link {
@@ -45,11 +45,11 @@
     grid-row-start: 2;
     grid-row-end: 3;
     list-style-type: none;
-    gap: 20px;
+    gap: 22px;
     align-items: end;
     justify-self: center;
-    padding-bottom: 35px;
-    padding-right: 190px;
+    padding-bottom: 36px;
+    padding-right: 200px;
 }
 
 .header__list-item:nth-child(3) {
@@ -99,15 +99,15 @@
     font-family: Formular;
     font-size: 36px;
     font-weight: 900;
-    justify-self: center;
+    justify-self: end;
     align-self: center;
     grid-column-start: 2;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 2;
-    padding-left: 250px;
-    padding-top: 23px;
-    line-height: 36px;
+    line-height: 35px;
+    padding-right: 169px;
+    padding-top: 25px;
 }
 
 .header__tel-text {
@@ -127,13 +127,18 @@
     background-color: #8B5CF6;
     color: #F9FAFB;
     justify-self: flex-end;
-    margin-right: 179px;
+    margin-right: 187px;
     margin-top: 20px;
 }
 
 .header__button:hover {
     background-color: orange;
     color: #F9FAFB;
+}
+
+.header__button:active {
+    background-color: dimgrey;
+    text-decoration: underline;
 }
 
 .main {
@@ -161,7 +166,6 @@
     font-size: 36px;
     font-weight: 900;
     line-height: 40px;
-    padding-top: px;
 }
 
 .hero__article-text {
@@ -169,15 +173,13 @@
     font-size: 21px;
     font-weight: 400;
     line-height: 28px;
-    padding-top: 10px;
+    padding-top: 8px;
 }
 
 .hero__article-img {
-    height: 345px;
-    margin-top: 11px;
+    height: 340px;
+    margin-top: 13px;
 }
-
-
 
 .hero__form {
     width: 50%;
@@ -198,7 +200,7 @@
     grid-row-start: 1;
     grid-row-end: 2;
     justify-self: center;
-    padding-top: 15px;
+    padding-top: 22px;
 }
 
 .hero__form-text {
@@ -209,7 +211,8 @@
     grid-row-end: 3;
     align-self: center;
     justify-self: center;
-    padding-bottom: 15px;
+    padding-top: 3px;
+    line-height: 24px;
 }
 
 .hero__form-text-span {
@@ -218,22 +221,20 @@
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
-    padding-left: 100px;
+    padding-left: 90px;
 }
-
-
-
 
 .input__text {
     grid-column-start: 1;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 3;
-    width: 485px;
+    width: 480px;
     height: 48px;
     align-self: flex-end;
     justify-self: center;
-    margin-bottom: 3px;
+    margin-bottom: -4px;
+    margin-right: 13px;
     border: 2px solid black;
     border-radius: 4px;
     padding-left: 10px;
@@ -254,8 +255,8 @@
     font-size: 16px;
     align-self: center;
     justify-self: flex-end;
-    margin-right: 10px;
-    margin-bottom: 8px;
+    margin-right: 19px;
+    margin-top: 5px;
     padding-left: 10px;
 }
 
@@ -264,13 +265,13 @@
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 4;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
     align-self: center;
-    margin-left: 10px;
-    margin-bottom: 10px;
+    margin-left: 5px;
+    margin-top: 2px;
     padding-left: 10px;
     font-family: Formular;
     font-size: 16px;
@@ -281,7 +282,7 @@
     grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 5;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
@@ -289,8 +290,7 @@
     font-family: Formular;
     font-size: 16px;
     justify-self: end;
-    margin-right: 10px;
-    margin-top: -8px;
+    margin-right: 19px;
 }
 
 .input__weight {
@@ -298,15 +298,14 @@
     grid-column-end: 3;
     grid-row-start: 4;
     grid-row-end: 5;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
     padding-left: 10px;
     font-family: Formular;
     font-size: 16px;
-    margin-left: 11px;
-    margin-top: -8px;
+    margin-left: 5px;
 }
 
 .input__country {
@@ -314,7 +313,7 @@
     grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 5;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
@@ -323,8 +322,8 @@
     font-size: 16px;
     align-self: flex-end;
     justify-self: end;
-    margin-bottom: -15px;
-    margin-right: 10px;
+    margin-bottom: -23px;
+    margin-right: 18px;
 }
 
 .input__cityOfPurchase {
@@ -332,7 +331,7 @@
     grid-column-end: 3;
     grid-row-start: 4;
     grid-row-end: 5;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
@@ -340,8 +339,8 @@
     font-family: Formular;
     font-size: 16px;
     align-self: flex-end;
-    margin-bottom: -15px;
-    margin-left: 10px;
+    margin-bottom: -23px;
+    margin-left: 5px;
 }
 
 
@@ -350,7 +349,7 @@
     grid-column-end: 2;
     grid-row-start: 5;
     grid-row-end: 6;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
@@ -359,8 +358,8 @@
     font-size: 16px;
     align-self: flex-end;
     justify-self: flex-end;
-    margin-bottom: 10px;
-    margin-right: 10px;
+    margin-bottom: 3px;
+    margin-right: 18px;
 }
 
 .input__deliveryCity {
@@ -368,7 +367,7 @@
     grid-column-end: 3;
     grid-row-start: 5;
     grid-row-end: 6;
-    width: 230px;
+    width: 228px;
     height: 48px;
     border: 2px solid black;
     border-radius: 4px;
@@ -376,8 +375,8 @@
     font-family: Formular;
     font-size: 16px;
     align-self: flex-end;
-    margin-bottom: 10px;
-    margin-left: 10px;
+    margin-bottom: 3px;
+    margin-left: 5px;
 }
 
 .hero__form-button {
@@ -385,10 +384,12 @@
     grid-column-end: 3;
     grid-row-start: 6;
     grid-row-end: 7;
-    width: 485px;
+    width: 478px;
     height: 42px;
     justify-self: center;
-    margin-top: 16px;
+    align-self: center;
+    margin-bottom: 5px;
+    margin-right: 16px;
     border: none;
     background-color: #8B5CF6;
     color: #F9FAFB;
@@ -404,6 +405,11 @@
 }
 
 
+.hero__form-button:active {
+    background-color: dimgrey;
+    text-decoration: underline;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -412,4 +418,77 @@
     border: 0;
     padding: 0;
     overflow: hidden;
+}
+
+.benefits {
+    width: 100%;
+    height: 452px;
+    background-color: #E5E7EB;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 3fr;
+}
+
+.benefits__title {
+    justify-self: center;
+    align-self: flex-end;
+    font-size: 30px;
+    font-weight: 900;
+    padding-bottom: 10px;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+.benefits__list {
+    display: flex;
+    list-style: none;
+    flex-wrap: wrap;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    gap: 6.5px;
+}
+
+.benefits__list-item {
+    width: 490px;
+    height: 184px;
+    background-color: #E5E7EB;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.list-item-img {
+    object-fit: none;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    align-self: flex-end;
+    padding-left: 18px;
+}
+
+.benefits__list-item-text-title {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+    align-self: flex-end;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.benefits__list-item-text {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    padding-left: 2px;
+    padding-top: 2px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
 }
