Тренировочный проект готов, много можно исправить, но пока я не знаю как

--- a/styles/global.css
+++ b/styles/global.css
@@ -63,3 +63,13 @@ span::selection {
   background-color: #8B5CF6;
   color: #F9FAFB;
 }
+
+button:hover {
+  background-color: orange;
+  color: #F9FAFB;
+}
+
+button:active {
+  background-color: dimgrey;
+  text-decoration: underline;
+}
